--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -1,4 +1,4 @@
-<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/nuje2873/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/nuje2873/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/nuje2873/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/nuje2873/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/nuje2873/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/nuje2873/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/nuje2873/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/nuje2873/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/nuje2873/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/nuje2873/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/nuje2873/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/nuje2873/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/nuje2873/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/nuje2873/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/nuje2873/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/nuje2873/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/nuje2873/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/nuje2873/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/nuje2873/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/nuje2873/www/master/t/djy/12a.jpg" title="头条"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p> <a href="https://tt6.jugd53.ml/qfqamotw/s513i" target="_blank">动态网</a> | <a href="https://tt6.jugd53.ml/qfqamotw/x11a" target="_blank">看中国</a> | <a href="https://git.io/fjHpI" target="_blank">新纪元</a> | <a href="https://tt6.jugd53.ml/qfqamotw/v12e" target="_blank">无界</a> | <a href="https://tt6.jugd53.ml/qfqamotw/p8t" target="_blank">退党</a> | <a href="https://git.io/fjHpT" target="_blank">网门</a> | <a href="https://tt6.jugd53.ml/qfqamotw/c4j" target="_blank">神韵</a> | <a href="https://tt6.jugd53.ml/qfqamotw/d12z" target="_blank">圣缘</a> | <a href="https://tt6.jugd53.ml/qfqamotw/o3k" target="_blank">明慧网</a> | <a href="https://tt6.jugd53.ml/qfqamotw/t10p" target="_blank">正见网</a> | <a href="https://tt6.jugd53.ml/qfqamotw/w9f" target="_blank">希望之声</a> | <a href="https://gitlab.com/szzdlab/w1/raw/master/5Vu3_XS2V.mp4" target="_blank">无罪辩护</a> |  <a href="https://gitlab.com/szzdlab/w5/raw/master/zjmd1_19.mp4" target="_blank">终级目的</a> |<a href="https://gitlab.com/szzdlab/w5/raw/master/mtdwh.mp4" target="_blank">漫谈党文化</a ></p><p><a href="https://tt6.jugd53.ml/qfqamotw/n7v" target="_blank">大纪元</a> | <a href="https://tt6.jugd53.ml/qfqamotw/o5v" target="_blank">新唐人</a> | <a href="https://git.io/JervF" target="_blank">亚太台</a> | <a href="https://git.io/fjHpG" target="_blank">直播</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2014-1-7/zfzx.mp4" target="_blank">伪火</a > | <a href="https://gitlab.com/szzdlab/w5/raw/master/5N.8.mp4" target="_blank">罪恶</a > | <a href="https://gitlab.com/szzdlab/w3/raw/master/9p.mp4" target="_blank">九评</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/wl.mp4" target="_blank">神话</a> | <a href="https://gitlab.com/szzdlab/w2/raw/master/3t/TdowhauWx9WiM.mp4" target="_blank">藏字石</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/szt.mp4" target="_blank">寻正道</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/wm.mp4" target="_blank">告诉未来</a > | <a href="https://gitlab.com/szzdlab/w3/raw/master/qh.mp4" target="_blank">清华学子</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2013-10-28/hongchaoyinmou-hi.mp4" target="_blank">红朝阴谋</a > |<a href="https://gitlab.com/szzdlab/w5/raw/master/fy.mp4" target="_blank">风雨天地行</a></p></td></tr>
+<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/nuje2873/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/nuje2873/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/nuje2873/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/nuje2873/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/nuje2873/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/nuje2873/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/nuje2873/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/nuje2873/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/nuje2873/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/nuje2873/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/nuje2873/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/nuje2873/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/nuje2873/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/nuje2873/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/nuje2873/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/nuje2873/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/nuje2873/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/nuje2873/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/nuje2873/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/nuje2873/www/master/t/djy/12a.jpg" title="头条"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p> <a href="https://tt6.jugd53.ml/jmikl/t513x" target="_blank">动态网</a> | <a href="https://tt6.jugd53.ml/jmikl/z11g" target="_blank">看中国</a> | <a href="https://git.io/fjHpI" target="_blank">新纪元</a> | <a href="https://tt6.jugd53.ml/jmikl/g12e" target="_blank">无界</a> | <a href="https://tt6.jugd53.ml/jmikl/c8s" target="_blank">退党</a> | <a href="https://git.io/fjHpT" target="_blank">网门</a> | <a href="https://tt6.jugd53.ml/jmikl/u4w" target="_blank">神韵</a> | <a href="https://tt6.jugd53.ml/jmikl/a12j" target="_blank">圣缘</a> | <a href="https://tt6.jugd53.ml/jmikl/v3b" target="_blank">明慧网</a> | <a href="https://tt6.jugd53.ml/jmikl/s10a" target="_blank">正见网</a> | <a href="https://tt6.jugd53.ml/jmikl/h9l" target="_blank">希望之声</a> | <a href="https://gitlab.com/szzdlab/w1/raw/master/5Vu3_XS2V.mp4" target="_blank">无罪辩护</a> |  <a href="https://gitlab.com/szzdlab/w5/raw/master/zjmd1_19.mp4" target="_blank">终级目的</a> |<a href="https://gitlab.com/szzdlab/w5/raw/master/mtdwh.mp4" target="_blank">漫谈党文化</a ></p><p><a href="https://tt6.jugd53.ml/jmikl/d7s" target="_blank">大纪元</a> | <a href="https://tt6.jugd53.ml/jmikl/r5t" target="_blank">新唐人</a> | <a href="https://git.io/JervF" target="_blank">亚太台</a> | <a href="https://git.io/fjHpG" target="_blank">直播</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2014-1-7/zfzx.mp4" target="_blank">伪火</a > | <a href="https://gitlab.com/szzdlab/w5/raw/master/5N.8.mp4" target="_blank">罪恶</a > | <a href="https://gitlab.com/szzdlab/w3/raw/master/9p.mp4" target="_blank">九评</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/wl.mp4" target="_blank">神话</a> | <a href="https://gitlab.com/szzdlab/w2/raw/master/3t/TdowhauWx9WiM.mp4" target="_blank">藏字石</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/szt.mp4" target="_blank">寻正道</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/wm.mp4" target="_blank">告诉未来</a > | <a href="https://gitlab.com/szzdlab/w3/raw/master/qh.mp4" target="_blank">清华学子</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2013-10-28/hongchaoyinmou-hi.mp4" target="_blank">红朝阴谋</a > |<a href="https://gitlab.com/szzdlab/w5/raw/master/fy.mp4" target="_blank">风雨天地行</a></p></td></tr>
 <tr><td VALIGN=TOP width="355" height="1000"><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/27/n12215389.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2020/06/GettyImages-1222989269-320x200.jpg"><p align="center">【最新疫情6·27】新病例急增 美多州暂缓重启</p></a>
 <a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/27/n12215389.md#1" title="【最新疫情6·27】新病例急增 美多州暂缓重启""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/06/GettyImages-1222989269-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/27/n12215347.md#1" title="继达美复航后 美联航7月恢复美中航班""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/03/1308051447311567-320x200.jpg">&nbsp;</a>
@@ -13,11 +13,11 @@
 <a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/26/n12214505.md#1" title="反制香港国安法 美宣布限制中共官员签证""><img width="73" src="https://i.epochtimes.com/assets/uploads/2018/10/GettyImages-1005525010-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/26/n12214278.md#1" title="【重播】白宫特别工作组简报会：疫情反弹""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/06/download-82-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/nuje2873/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://nuje2873.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>14分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/27/n12215664.md#1">组图：渡海来台名画家 95高龄杜簦吟回顾展</a><br>
-:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/27/n12215788.md#1">美司法部成立工作小组 调查抗议中的极端分子</a><br>
-:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/27/n12215389.md#1">【最新疫情6·27】新病例急增 美多州暂缓重启</a><br>
+:clock8: <em>31分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/27/n12215664.md#1">组图：渡海来台名画家 95高龄杜簦吟回顾展</a><br>
+:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/27/n12215788.md#1">美司法部成立工作小组 调查反政府极端分子</a><br>
+:clock8: <em>3小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/27/n12215389.md#1">【最新疫情6·27】新病例急增 美多州暂缓重启</a><br>
 :clock8: <em>3小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/27/n12215565.md#1">中国连续四年被列为贩卖人口最严重国家</a><br>
-:clock8: <em>3小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/27/n12215668.md#1">美海关截获上万件来自中国非法枪支零件</a><br>
+:clock8: <em>4小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/27/n12215668.md#1">美海关截获上万件来自中国非法枪支零件</a><br>
 :clock8: <em>5小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/27/n12215427.md#1">刘贤斌出狱返家难 朋友前去迎接被抓</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/25/n12211676.md#1">端午节北京下冰雹 形状酷似中共病毒</a><br>
@@ -114,10 +114,10 @@
 <a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/20/n12199884.md#1">专访王维洛：三峡工程无法防洪 准备逃生包</a><br>
 <a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/3/n12156726.md#1">【独家】大连610整改 加剧迫害法轮功</a><br>
 <a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/2/n12156428.md#1">【独家】卫健委秘密讲话泄中共瞒疫重点</a><br>
-<br><p align="center"><a href="https://github.com/nuje2873/djy/blob/master/gb/nf6092.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>传统文化</strong></p></h2><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/5/n12163931.md#1">【命理】48岁才起运的大器晚成之命</a><br>
+<br><p align="center"><a href="https://github.com/nuje2873/djy/blob/master/gb/nf6092.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>传统文化</strong></p></h2><a href="https://github.com/nuje2873/djy/blob/master/gb/20/5/23/n12131792.md#1">【康熙大帝】君臣交锋之智擒鳌拜</a><br>
+<a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/5/n12163931.md#1">【命理】48岁才起运的大器晚成之命</a><br>
 <a href="https://github.com/nuje2873/djy/blob/master/gb/20/5/15/n12112533.md#1">违背原著的宝玉娶亲</a><br>
 <a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/22/n12204829.md#1">【佳人传】一门皆风雅 沈宜修的诗意桃源</a><br>
 <a href="https://github.com/nuje2873/djy/blob/master/gb/20/5/23/n12131668.md#1">【康熙大帝】鳌拜犯上 君臣交锋</a><br>
 <a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/14/n12183964.md#1">【文史】古籍中多姿多彩的端午节粽</a><br>
-<a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/24/n12209159.md#1">端午：纯阳正气辟阴邪</a><br>
 <br><p align="center"><a href="https://github.com/nuje2873/djy/blob/master/gb/news2007.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>九评共产党</strong></p></h2><a href="https://github.com/nuje2873/djy/blob/master/gb/4/11/19/n722529.md#1" target="_blank">【一】评共产党是什么</a><br><a href="https://github.com/nuje2873/djy/blob/master/gb/4/11/21/n723946.md#1" target="_blank">【二】评中国共产党是怎样起家的</a><br><a href="https://github.com/nuje2873/djy/blob/master/gb/4/11/23/n725597.md#1" target="_blank">【三】评中国共产党的暴政</a><br><a href="https://github.com/nuje2873/djy/blob/master/gb/4/11/25/n727814.md#1" target="_blank">【四】评共产党是反宇宙的力量</a><br><a href="https://github.com/nuje2873/djy/blob/master/gb/4/11/27/n730058.md#1" target="_blank">【五】评江泽民与中共相互利用迫害法轮功</a><br><a href="https://github.com/nuje2873/djy/blob/master/gb/4/11/29/n731667.md#1" target="_blank">【六】评中国共产党破坏民族文化</a><br><a href="https://github.com/nuje2873/djy/blob/master/gb/4/12/1/n733806.md#1" target="_blank">【七】评中国共产党的杀人历史</a><br><a href="https://github.com/nuje2873/djy/blob/master/gb/4/12/3/n735942.md#1" target="_blank">【八】评中国共产党的邪教本质</a><br><a href="https://github.com/nuje2873/djy/blob/master/gb/4/12/4/n737542.md#1" target="_blank">【九】评中国共产党的流氓本性</a></td><td VALIGN=TOP width="352"><h2><p><strong>大纪元重要书籍</strong></p></h2><a href="https://github.com/nuje2873/djy/blob/master/gb/nf3541.md#1" target="_blank">《九评共产党》</a><br><a href="https://github.com/nuje2873/djy/blob/master/gb/nf1235328.md#1" target="_blank">《共产主义的终极目的》</a><br><a href="https://github.com/nuje2873/djy/blob/master/gb/nf1267582.md#1" target="_blank">《魔鬼在统治着我们的世界》</a><br><a href="https://github.com/nuje2873/djy/blob/master/gb/nf3628.md#1" target="_blank">《解体党文化》</a><br><a href="https://github.com/nuje2873/djy/blob/master/gb/nf1242535.md#1" target="_blank">《真实的江泽民》</a><br><a href="https://github.com/nuje2873/djy/blob/master/gb/nf1138304.md#1" target="_blank">《中国历史正述》</a><br><a href="https://github.com/nuje2873/djy/blob/master/gb/nf1076978.md#1" target="_blank">《千古英雄人物》</a><br><br><p align="center"><a href="https://github.com/nuje2873/djy/blob/master/gb/nf3046.md#1">更多......</a></p></td></tr></table><div align="center"><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/nuje2873/djy/blob/master/gb/nf1351518.md#1<br><a href="https://github.com/nuje2873/djy/blob/master/gb/nf1351518.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/nuje2873/djy/blob/master/gb/nf1351518.md%231" title="分享本文章"></a><br>原文地址： <a href="https://www.epochtimes.com/gb/nf1351518.htm">https://www.epochtimes.com/gb/nf1351518.htm</a>    （国内需<a href="https://github.com/nuje2873/www/blob/master/README.md#8">下载翻墙软件</a>才能访问）</div>
